# persys-agent

./: .gitignore  CMakeLists.txt  Dockerfile.ubuntu  ENGINEERING.md  Makefile  README.md
.github/workflows/: docker-image.yml
docker/: Dockerfile.alpine  docker-compose.yml
monitoring/: docker-compose.yml
monitoring/grafana/: docker-dashboard.json
monitoring/prometheus/: prometheus.yml
src/: main.cpp
src/controllers/: ComposeController.cpp  ComposeController.h  CronController.cpp  CronController.h  DockerController.cpp  DockerController.h  NodeController.cpp  NodeController.h  SwarmController.cpp  SwarmController.h  SystemController.cpp  SystemController.h
src/routes/: ComposeRoutes.cpp  ComposeRoutes.h  CronRoutes.cpp  CronRoutes.h  DockerRoutes.cpp  DockerRoutes.h  HandshakeRoutes.cpp  HandshakeRoutes.h  Middleware.h  SwarmRoutes.cpp  SwarmRoutes.h
systemd/: persys-agent.service  sample.env
